start table content #1

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,91 @@
                     </tbody>
                 </table>
             </div>
+            <div class="maybe-release">
+                <p>여러종의 도서를 함께 주문할 경우, 배송예정일이 가장 오래걸리는 도서가 준비된 후에 같이 출고됩니다. 배송일이 짧은 도서와 긴 도서를 각각 별도로 주문하시면 배송시간이 절약됩니다.</p>
+                <button class="guide-btn">
+                    <span class="guide-btn-left">
+                        <span class="guide-btn-right">
+                            예상출고일 안내
+                        </span>
+                    </span>
+                </button>
+            </div>
+            <div class="maybe-release">
+                <strong class="red-text">※ 무료배송기간 ( 2010년 8월 13일 ~ 9월 30일 )</strong>
+                <p>단 한권을 구매해도 배송료 무료! 지금은 무료배송 기간입니다! ( 해외배송도서는 무료배송에서 제외됩니다.)</p>
+            </div>
+            <div class="your-shopping">
+                <ul class="tab-bar">
+                    <li>
+                        <a href="#none" class="active">일반배송 장바구니</a>
+                    </li>
+                    <li>
+                        <a href="#none">Express 장바구니</a>
+                    </li>
+                </ul>
+                <p class="tab-bar-p">장바구니에 담긴 상품은 <strong class="red-text">15일간 보관</strong> 후 삭제됩니다.</p>
+                <div class="order-product">
+                    <div class="order-table">
+                        <div class="about-table">
+                            <span class="green-marker"></span>
+                            <h3 class="main-table-h3">일반주문 상품</h3>
+                            <dl class="about-table-list">
+                                <dt>상품 정렬</dt>
+                                <dd>: 배송일</dd>
+                                <dd>가격</dd>
+                                <dd>할인율</dd>
+                                <dd>할인금액</dd>
+                                <dd>수량</dd>
+                            </dl>
+                        </div>
+                        <table class="main-table">
+                            <h3 class="table-caption">일반주문 상품 표</h3>
+                            <colgroup>
+                                <col style="width: 10%;">
+                                <col style="width: 30%;">
+                                <col style="width: 17.5%;">
+                                <col style="width: 10%;">
+                                <col style="width: 17.5%;">
+                                <col style="width: 15%;">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th>예상출고일</th>
+                                    <th>상품명</th>
+                                    <th>상품금액</th>
+                                    <th>수량</th>
+                                    <th>합계</th>
+                                    <th><input type="checkbox"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>내일<br>
+                                        (15일,수)
+                                    </td>
+                                    <td class="product-name">
+                                        <img src="../img/main/yellow-book.png" alt="스포츠서비스 마케팅론 책 사진">
+                                        <div class="book-right-text">
+                                            [도서] <strong class="black-text">스포츠서비스 마케팅론</strong>
+                                            <ul class="about-book">
+                                                <li>임운학 저</li>
+                                                <li>광림북하우스</li>
+                                                <li>2010.04.12</li>
+                                            </ul>
+                                            <button class="more-read">간략정보</button>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <strong class="red-text">14,400</strong>원 (<span class="percent-text">10%↓</span>)<br>
+                                        <strong class="green-text">130원</strong>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
