--- a/html/index.html
+++ b/html/index.html
@@ -87,6 +87,17 @@
                     </li>
                 </ul>
                 <p class="tab-bar-p">장바구니에 담긴 상품은 <strong class="red-text">15일간 보관</strong> 후 삭제됩니다.</p>
+                <div class="hover-box">
+                    <span class="hover-box-left">
+                        <span class="hover-box-right">
+                            <p class="hover-box-text">
+                                <strong>주문하기 전 잠깐!</strong><br>
+                                배송시간이 짧은 도서를 따로 주문하시면 빨리 받아보실 수 있습니다
+                            </p>
+                            <button class="hover-box-close"></button>
+                        </span>
+                    </span>
+                </div>
                 <div class="order-product">
                     <div class="order-table">
                         <div class="about-table">
@@ -105,20 +116,22 @@
                             <h3 class="table-caption">일반주문 상품 표</h3>
                             <colgroup>
                                 <col style="width: 10%;">
-                                <col style="width: 30%;">
-                                <col style="width: 17.5%;">
+                                <col style="width: 35%;">
+                                <col style="width: 15%;">
                                 <col style="width: 10%;">
-                                <col style="width: 17.5%;">
+                                <col style="width: 15%;">
                                 <col style="width: 15%;">
                             </colgroup>
                             <thead>
                                 <tr>
-                                    <th>예상출고일</th>
-                                    <th>상품명</th>
-                                    <th>상품금액</th>
-                                    <th>수량</th>
-                                    <th>합계</th>
-                                    <th><input type="checkbox"></th>
+                                    <th scope="col">예상출고일</th>
+                                    <th scope="col">상품명</th>
+                                    <th scope="col">상품금액</th>
+                                    <th scope="col">
+                                        <label for="num" class="num-change">수량</label>
+                                    </th>
+                                    <th scope="col">합계</th>
+                                    <th scope="col"><input type="checkbox" class="checkbox"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -142,6 +155,227 @@
                                         <strong class="red-text">14,400</strong>원 (<span class="percent-text">10%↓</span>)<br>
                                         <strong class="green-text">130원</strong>
                                     </td>
+                                    <td>
+                                        <input id="num" type="text" class="num-text-box" value="2">
+                                        <button class="change-btn">변경</button>
+                                    </td>
+                                    <td>
+                                        <strong class="red-text">14,400</strong>원 (<span class="percent-text">10%↓</span>)<br>
+                                        <strong class="green-text">130원</strong>
+                                    </td>
+                                    <td>
+                                        <div class="keep-delete-position">
+                                            <button class="keep-btn">
+                                                <span class="keep-btn-left">
+                                                    <span class="keep-btn-right">
+                                                        보관함에 담기
+                                                    </span>
+                                                </span>
+                                            </button>
+                                            <button class="delete-btn">
+                                                <span class="delete-btn-left">
+                                                    <span class="delete-btn-right">
+                                                        삭제하기
+                                                    </span>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input type="checkbox" class="checkbox">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>내일<br>
+                                        (15일,수)
+                                    </td>
+                                    <td class="product-name">
+                                        <img src="../img/main/yellow-book.png" alt="스포츠서비스 마케팅론 책 사진">
+                                        <div class="book-right-text">
+                                            [도서] <strong class="black-text">스포츠서비스 마케팅론</strong>
+                                            <ul class="about-book">
+                                                <li>임운학 저</li>
+                                                <li>광림북하우스</li>
+                                                <li>2010.04.12</li>
+                                            </ul>
+                                            <button class="more-read">간략정보</button>
+                                        </div>
+                                    </td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="order-product">
+                    <div class="order-table">
+                        <div class="about-table">
+                            <span class="green-marker"></span>
+                            <h3 class="main-table-h3">해외주문 상품</h3>
+                        </div>
+                        <table class="main-table">
+                            <h3 class="table-caption">해외주문 상품 표</h3>
+                            <colgroup>
+                                <col style="width: 10%;">
+                                <col style="width: 35%;">
+                                <col style="width: 15%;">
+                                <col style="width: 10%;">
+                                <col style="width: 15%;">
+                                <col style="width: 15%;">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th scope="col">예상출고일</th>
+                                    <th scope="col">상품명</th>
+                                    <th scope="col">상품금액</th>
+                                    <th scope="col">
+                                        <label for="num" class="num-change">수량</label>
+                                    </th>
+                                    <th scope="col">합계</th>
+                                    <th scope="col"><input type="checkbox" class="checkbox"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>내일<br>
+                                        (15일,수)
+                                    </td>
+                                    <td class="product-name">
+                                        <img src="../img/main/yellow-book.png" alt="스포츠서비스 마케팅론 책 사진">
+                                        <div class="book-right-text">
+                                            [도서] <strong class="black-text">스포츠서비스 마케팅론</strong>
+                                            <ul class="about-book">
+                                                <li>임운학 저</li>
+                                                <li>광림북하우스</li>
+                                                <li>2010.04.12</li>
+                                            </ul>
+                                            <button class="more-read">간략정보</button>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <strong class="red-text">14,400</strong>원 (<span class="percent-text">10%↓</span>)<br>
+                                        <strong class="green-text">130원</strong>
+                                    </td>
+                                    <td>
+                                        <input id="num" type="text" class="num-text-box" value="2">
+                                        <button class="change-btn">변경</button>
+                                    </td>
+                                    <td>
+                                        <strong class="red-text">14,400</strong>원 (<span class="percent-text">10%↓</span>)<br>
+                                        <strong class="green-text">130원</strong>
+                                    </td>
+                                    <td>
+                                        <div class="keep-delete-position">
+                                            <button class="keep-btn">
+                                                <span class="keep-btn-left">
+                                                    <span class="keep-btn-right">
+                                                        보관함에 담기
+                                                    </span>
+                                                </span>
+                                            </button>
+                                            <button class="delete-btn">
+                                                <span class="delete-btn-left">
+                                                    <span class="delete-btn-right">
+                                                        삭제하기
+                                                    </span>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input type="checkbox" class="checkbox">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>내일<br>
+                                        (15일,수)
+                                    </td>
+                                    <td class="product-name">
+                                        <img src="../img/main/yellow-book.png" alt="스포츠서비스 마케팅론 책 사진">
+                                        <div class="book-right-text">
+                                            [도서] <strong class="black-text">스포츠서비스 마케팅론</strong>
+                                            <ul class="about-book">
+                                                <li>임운학 저</li>
+                                                <li>광림북하우스</li>
+                                                <li>2010.04.12</li>
+                                            </ul>
+                                            <button class="more-read">간략정보</button>
+                                        </div>
+                                    </td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="6">
+                                        <b class="tfoot-text">선택상품</b>
+                                        <button class="keep-btn">
+                                            <span class="keep-btn-left">
+                                                <span class="keep-btn-right">
+                                                    보관함에 담기
+                                                </span>
+                                            </span>
+                                        </button>
+                                        <button class="gray-btn">
+                                            <span class="gray-btn-left">
+                                                <span class="gray-btn-right">
+                                                    Express 장바구니
+                                                </span>
+                                            </span>
+                                        </button>
+                                        <button class="delete-btn">
+                                            <span class="delete-btn-left">
+                                                <span class="delete-btn-right">
+                                                    삭제
+                                                </span>
+                                            </span>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+                <div class="table-bottom-contents">
+                    <div class="delivery">
+                        <div class="maybe-delivery">
+                            <strong class="black-text">예상 배송일 : </strong><strong class="red-text">9월 22일</strong> (서울시 종로구 내수동 기준)
+                            <button class="keep-btn">
+                                <span class="keep-btn-left">
+                                    <span class="keep-btn-right">
+                                        지역 변경
+                                    </span>
+                                </span>
+                            </button>
+                        </div>
+                        <div class="sale">
+                            <strong class="black-text">기업할인총액 : </strong><strong class="red-text">2,160원</strong>
+                            <p class="sale-p">이제너무 Benecafe회원 기업고객님께서는 정가에서 총 2,160원을 할인 받으실 수 있습니다.</p>
+                        </div>
+                    </div>
+                    <div class="order-table-position">
+                        <table class="order-table">
+                            <h3 class="table-caption">총 주문금액 및 예상 적립 마일리지 안내 표</h3>
+                            <colgroup>
+                                <col style="width: 80%;">
+                                <col style="width: 20%;">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">주문 상품 수량</th>
+                                    <td>4종(4개)</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">주문 상품 총 금액</th>
+                                    <td>44,200원</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">총 배송비
+                                        <button class="send-price" title="배송비 설명"></button>
+                                    </th>
+                                    <td>0 원</td>
                                 </tr>
                             </tbody>
                         </table>
