--- a/html/index.html
+++ b/html/index.html
@@ -135,7 +135,12 @@
                                         <label for="num" class="num-change">수량</label>
                                     </th>
                                     <th scope="col">합계</th>
-                                    <th scope="col"><input type="checkbox" class="checkbox"></th>
+                                    <th scope="col">
+                                        <label for="check-1" class="checkbox-cursor-th">
+                                            <input type="checkbox" class="checkbox"
+                                            id="check-1">
+                                        </label>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -184,7 +189,10 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input type="checkbox" class="checkbox">
+                                        <label for="check-2" class="checkbox-cursor">
+                                            <input type="checkbox" class="checkbox"
+                                            id="check-2">
+                                        </label>
                                     </td>
                                 </tr>
                                 <tr>
@@ -237,7 +245,12 @@
                                         <label for="num-2" class="num-change">수량</label>
                                     </th>
                                     <th scope="col">합계</th>
-                                    <th scope="col"><input type="checkbox" class="checkbox"></th>
+                                    <th scope="col">
+                                        <label for="check-3" class="checkbox-cursor-th">
+                                            <input type="checkbox" class="checkbox"
+                                            id="check-3">
+                                        </label>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -286,7 +299,10 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input type="checkbox" class="checkbox">
+                                        <label for="check-4" class="checkbox-cursor">
+                                            <input type="checkbox" class="checkbox"
+                                            id="check-4">
+                                        </label>
                                     </td>
                                 </tr>
                                 <tr>
