main header modify of index

--- a/html/index.html
+++ b/html/index.html
@@ -14,21 +14,13 @@
             <div class="steps">
                 <ul class="step-list">
                     <li class="step-1">
-                        <span class="step-white-left">
-                            <span class="step-white-right">
-                                <span class="step-text">STEP 1</span> 장바구니
-                            </span>
-                        </span>
+                        <span class="step-text">STEP 1</span> 장바구니
                     </li>
                     <li class="step-2">
-                        <span class="step-blue-right">
-                            <span class="step-text">STEP 2</span> 주문·결제
-                        </span>
+                        <span class="step-text">STEP 2</span> 주문·결제
                     </li>
                     <li class="step-3">
-                        <span class="step-white-last-right">
-                            <span class="step-text">STEP 3</span> 주문완료
-                        </span>
+                        <span class="step-text">STEP 3</span> 주문완료
                     </li>
                 </ul>
             </div>
@@ -38,13 +30,13 @@
                 <table class="small-table">
                     <h3 class="table-caption">고객 정보 표</h3>
                     <colgroup>
-                        <col style="width: 20%;">
-                        <col style="width: 20%;">
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 10%;">
-                        <col style="width: 10%;">
-                        <col style="width: 10%;">
+                        <col style="width: 150px;">
+                        <col style="width: 170px;">
+                        <col style="width: 125px;">
+                        <col style="width: 125px;">
+                        <col style="width: 124px;">
+                        <col style="width: 125px;">
+                        <col style="width: 125px;">
                     </colgroup>
                     <tbody>
                         <tr>
