modify of table colgroup width #8

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
                     <h3 class="table-caption">고객 정보 표</h3>
                     <colgroup>
                         <col style="width: 150px;">
-                        <col style="width: 170px;">
+                        <col style="width: 169px;">
                         <col style="width: 125px;">
                         <col style="width: 125px;">
                         <col style="width: 124px;">
@@ -71,7 +71,7 @@
             </div>
             <div class="maybe-release">
                 <strong class="red-text">※ 무료배송기간 ( 2010년 8월 13일 ~ 9월 30일 )</strong>
-                <p>단 한권을 구매해도 배송료 무료! 지금은 무료배송 기간입니다! ( 해외배송도서는 무료배송에서 제외됩니다.)</p>
+                <p class="red-bottom-text">단 한권을 구매해도 배송료 무료! 지금은 무료배송 기간입니다! ( 해외배송도서는 무료배송에서 제외됩니다.)</p>
             </div>
             <div class="your-shopping">
                 <ul class="tab-bar">
@@ -111,12 +111,12 @@
                         <table class="main-table">
                             <h3 class="table-caption">일반주문 상품 표</h3>
                             <colgroup>
-                                <col style="width: 10%;">
-                                <col style="width: 35%;">
-                                <col style="width: 15%;">
-                                <col style="width: 10%;">
-                                <col style="width: 15%;">
-                                <col style="width: 15%;">
+                                <col style="width: 97px;">
+                                <col style="width: 332px;">
+                                <col style="width: 147px;">
+                                <col style="width: 81px;">
+                                <col style="width: 147px;">
+                                <col style="width: 141px;">
                             </colgroup>
                             <thead>
                                 <tr>
@@ -221,12 +221,12 @@
                         <table class="main-table">
                             <h3 class="table-caption">해외주문 상품 표</h3>
                             <colgroup>
-                                <col style="width: 10%;">
-                                <col style="width: 35%;">
-                                <col style="width: 15%;">
-                                <col style="width: 10%;">
-                                <col style="width: 15%;">
-                                <col style="width: 15%;">
+                                <col style="width: 97px;">
+                                <col style="width: 332px;">
+                                <col style="width: 147px;">
+                                <col style="width: 81px;">
+                                <col style="width: 147px;">
+                                <col style="width: 141px;">
                             </colgroup>
                             <thead>
                                 <tr>
