--- a/html/index.html
+++ b/html/index.html
@@ -333,7 +333,7 @@
                                         <button class="gray-btn">
                                             <span class="gray-btn-left">
                                                 <span class="gray-btn-right">
-                                                    Express 장바구니
+                                                    Express 장바구니 이동
                                                 </span>
                                             </span>
                                         </button>
@@ -364,15 +364,15 @@
                         </div>
                         <div class="sale">
                             <strong class="black-text">기업할인총액 : </strong><strong class="red-text">2,160원</strong>
-                            <p class="sale-p">이제너무 Benecafe회원 기업고객님께서는 정가에서 총 2,160원을 할인 받으실 수 있습니다.</p>
+                            <p class="sale-p">이제너두 Benecafe회원 기업고객님께서는 정가에서 총 2,160원을 할인 받으실 수 있습니다.</p>
                         </div>
                     </div>
                     <div class="order-table-position">
                         <table class="order-table">
                             <h3 class="table-caption">총 주문금액 및 예상 적립 마일리지 안내 표</h3>
                             <colgroup>
-                                <col style="width: 80%;">
-                                <col style="width: 20%;">
+                                <col style="width: 71%;">
+                                <col style="width: 29%;">
                             </colgroup>
                             <tbody>
                                 <tr>
@@ -412,17 +412,10 @@
                     </div>
                     <div class="main-btn-position">
                         <button class="order-btn">
-                            <span class="order-btn-left">
-                                <span class="order-btn-right">
-                                    주문하기
-                                </span>
-                            </span>
+                            주문하기
                         </button>
                         <button class="more-btn">
-                            <span class="more-btn-left">
-                                <span class="more-btn-right">계속쇼핑</span>
-
-                            </span>
+                            계속쇼핑
                         </button>
                     </div>
                 </div>
@@ -436,7 +429,7 @@
                             <button class="guide-btn">
                                 <span class="guide-btn-left">
                                     <span class="guide-btn-right">
-                                        예상출고일 안내
+                                        상품별 배송일 안내
                                     </span>
                                 </span>
                             </button>
